<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto_texto"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/detalhes_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria_texto"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/detalhes_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_min_texto"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/detalhes_preco_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:numeric="decimal"
        android:phoneNumber="false"
        android:textSize="20sp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_max_texto"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/detalhes_preco_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numeric="decimal"
        android:textSize="20sp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loja_texto"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/detalhes_loja_achar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/buscape_btn"
        android:src="@drawable/buscape_transp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/img_buscape"
        android:adjustViewBounds="false"
        android:background="#fff" />

</LinearLayout>
